# d365fo-agent-developer

./: .gitignore  README.md  d365fo-ai-agent-expert-plan.md  d365fo-ai-agent-implementation-plan.md  pyproject.toml
config/: babiloufinops.rules.json  contoso.rules.json  x++-rules.json
docs/: architecture.md  benchmark-catalog.md  graphify-coverage-plan.md  mcp-server.md  metadata-schema.md  rollout-plan-30-60-90.md  specification-contract.md  tool-catalog.md
docs/examples/: action-role-patch-set-spec.md  form-extension-spec.md  menu-item-output-spec.md  merge-class-extension-spec.md  merge-form-extension-spec.md  merge-query-spec.md  merge-service-group-spec.md  merge-service-spec.md  merge-table-extension-spec.md  multi-artifact-spec.md  patch-set-spec.md  query-spec.md  service-group-spec.md  service-patch-set-spec.md  service-spec.md  table-extension-spec.md
docs/superpowers/plans/: 2026-06-23-doc-grounding-phase1.md  2026-06-23-feature2-functional-spec-skill.md  2026-06-23-phase2-semantic-layer.md
docs/superpowers/specs/: 2026-06-23-d365-functional-specs-design.md
skills/functional-spec/: SKILL.md
specs/real/: README.md  surrogate-01-table-ext-security.md  surrogate-02-class-ext-coc.md  surrogate-03-data-entity.md  surrogate-04-service-nocorpus.md  surrogate-05-form-ext.md
src/d365fo_agent/: __init__.py  aot_relations.py  ax2012_indexer.py  build.py  cli.py  doc_ingest.py  doc_store.py  doc_vectors.py  embed.py  entity_derive.py  generator.py  graph_query.py  graphify_runner.py  guidance.py  index_store.py  indexer.py  knowledge.py  knowledge_fetch.py  linter.py  mcp_server.py  models.py  packageslocal_export.py  rules.py  security_wiring.py  spec_grounding.py  specs.py  sql_model.py  type_profile.py  validate.py
tasks/: lessons.md  todo.md
tests/: test_aot_relations.py  test_ax2012.py  test_build.py  test_catalog.py  test_cli.py  test_doc_cli.py  test_doc_ingest.py  test_doc_mcp_tools.py  test_doc_store.py  test_embed.py  test_entity_derive.py  test_guidance.py  test_linter.py  test_mcp_toolkit.py  test_security_wiring.py  test_spec_grounding.py  test_spec_pipeline.py  test_sql_model.py
tools/: run-graphify-wave.ps1  run-wave1-remaining.sh
(+13 files in other folders)
